--- a/indx.html
+++ b/indx.html
@@ -9,33 +9,161 @@
 </head>
 <body>
     <header>
-            <div class="amazon-logo">
-                <a href="indx.html" class="amazon-link"> 
-                  <img src="images/amazon-logo-white.png" alt="">
-              </a>
-              <a href="indx.html">
-                  <img src="images/amazon-mobile-logo-white.png" alt="" class="mobile-logo">
-              </a>
-              </div>
-              <div class="search-bar">
-                  <input type="text" placeholder="Search" class="input-search-bar">
-                  <button class="search-button">
-                      <i class="fa-solid fa-magnifying-glass"></i>
-                  </button>
-              </div>
-              <div class="shopping">
-                      <a href="orders" class="orders-links">
-                          <span>Returns</span>
-                          <span>&Orders</span>
-                      </a>
-                      <a href="checkout" class="cart-link">
-                          <img src="images/cart-icon.png" alt="" class="shopping-icon">
-                          <div class="cart-quantity">4</div>
-                          <div class="cart-text">Cart</div>
-                      </a>
-              </div>
-              <!-- <div class="hamburger-menu"></div> -->
+           <div class="top-header">
+                <div class="amazon-logo">
+                    <a href="indx.html" class="amazon-link"> 
+                    <img src="images/amazon-logo-white.png" alt="">
+                </a>
+                <a href="indx.html">
+                    <img src="images/amazon-mobile-logo-white.png" alt="" class="mobile-logo">
+                </a>
+                </div>
+                <div class="search-bar">
+                    <input type="text" placeholder="Search" class="input-search-bar">
+                    <button class="search-button">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+                <div class="shopping">
+                        <a href="orders" class="orders-links">
+                            <span>Returns</span>
+                            <span>&Orders</span>
+                        </a>
+                        <a href="checkout" class="cart-link">
+                            <img src="images/cart-icon.png" alt="" class="shopping-icon">
+                            <div class="cart-quantity">4</div>
+                            <div class="cart-text">Cart</div>
+                        </a>
+                </div>
+                <!-- <div class="hamburger-menu"></div> -->
+           </div>
+           <div class="bottom-header">
+                <a href="#" class="js-all-link">
+                    <img src="images/hamburger-menu.png" alt="">
+                    All
+                    <div class="sub-all none js-sub-all">
+                        <div class="close js-close">
+                            <i class="fa-solid fa-rectangle-xmark"></i>
+                        </div>
+                        <div class="container-hello-sign-in">
+                            <a href="#" class="sign-in-aside">
+                                <span>Hello,Sign in</span>
+                            </a>
+                        </div>
+                        <div class="hmenu-content">
+                            <ul>
+                                <li>
+                                    <div>Trending</div>
+                                </li>
+                                <li>
+                                    <a href="#">Best Sellers</a>
+                                </li>
+                                <li>
+                                    <a href="#">New realeses</a>
+                                </li>
+                                <li>
+                                    <a href="#">Movers &amp; Shakers</a>
+                                </li>
+                                <li class="hmenu-seprartor"></li>
+
+
+                                <li>
+                                    <div>Digital Content &amp; Devices</div>
+                                </li>
+                                <li>
+                                    <a href="#">Amazon-luna-Cloud Gaming</a>
+                                </li>
+                                <li>
+                                    <a href="#">Prime Video</a>
+                                </li>
+                                <li>
+                                    <a href="#">Amazon Music</a>
+                                </li>
+                                <li>
+                                    <a href="#">Echo &amp; Alexa</a>
+                                </li>
+                                <li>
+                                    <a href="#">Fire Tablets</a>
+                                </li>
+                                <li>
+                                    <a href="#">Fire Tv</a>
+                                </li>
+                                <li>
+                                    <a href="#">Kinddle E-readers &amp; Books</a>
+                                </li>
+                                <li>
+                                    <a href="#">Audible Books &amp; Originals</a>
+                                </li>
+                                <li>
+                                    <a href="#">Amazon Photos</a>
+                                </li>
+                                <li>
+                                    <a href="#">Amazon Appstore</a>
+                                </li>
+                                <li class="hmenu-seprartor"></li>
+
+
+                                <li>
+                                    <div>Shop By Department</div>
+                                </li>
+                                <li>
+                                    <a href="#">Clothing,Shoes,Jewelry &amp; Watches</a>
+                                </li>
+                                <li>
+                                    <a href="#">Amazon Fresh</a>
+                                </li>
+                                <li>
+                                   <a href="#"> Books</a>
+                                </li>
+                                <li>
+                                    <a href="#">Movies,Music &amp; Games</a>
+                                </li>
+                                <li class="hmenu-seprartor"></li>
+
+
+                                <li>
+                                    <div>Programs &amp; Features</div>
+                                </li>
+                                <li>
+                                    <a href="#">Whole Foods Maarket</a>
+                                </li>
+                                <li>
+                                    <a href="#">Medical Care &amp; pharmacy</a>
+                                </li>
+                                <li>
+                                    <a href="#">Amazon Physical Stores</a>
+                                </li>
+                                <li>
+                                    <a href="#">Subscribe &amp; Save</a>
+                                </li>
+
+                            </ul>
+                        </div>
+
+
+
+                    </div>
+                </a>
+                <a href="#">Medical Care</a>
+                <a href="#">Groceries</a>
+                <a href="#">Best Sellers</a>
+                <a href="#">Amazon Basics</a>
+                <a href="#">Today's Deals</a>
+                <a href="#">New Realeases</a>
+                <a href="#">Prime</a>
+                <a href="#">Registry</a>
+                <a href="#">Customer Service</a>
+                <a href="#">Music</a>
+                <a href="#">Books</a>
+                <a href="#">Pharmacy</a>
+                <a href="#">Anazon Home</a>
+                <a href="#">Fashion</a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Find a Gift</a>
+                <a href="#">Luxury Stores</a>
+                <a href="#">Sell</a>
+           </div>
     </header>
-    
+    <script src="js/script.js"></script>
 </body>
 </html>
