--- a/indx.html
+++ b/indx.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/css/all.min.css">
+    <link rel="shortcut icon" href="images/_e9e31c3b-0252-4f92-b307-e122bd65422a.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>Sample Amazon</title>
 </head>
