--- a/indx.html
+++ b/indx.html
@@ -42,109 +42,87 @@
                 <a href="#" class="js-all-link">
                     <img src="images/hamburger-menu.png" alt="">
                     All
-                    <div class="sub-all none js-sub-all">
-                        <div class="close js-close">
-                            <i class="fa-solid fa-rectangle-xmark"></i>
-                        </div>
-                        <div class="container-hello-sign-in">
-                            <a href="#" class="sign-in-aside">
-                                <span>Hello,Sign in</span>
-                            </a>
-                        </div>
-                        <div class="hmenu-content">
-                            <ul>
-                                <li>
-                                    <div>Trending</div>
-                                </li>
-                                <li>
-                                    <a href="#">Best Sellers</a>
-                                </li>
-                                <li>
-                                    <a href="#">New realeses</a>
-                                </li>
-                                <li>
-                                    <a href="#">Movers &amp; Shakers</a>
-                                </li>
-                                <li class="hmenu-seprartor"></li>
-
-
-                                <li>
-                                    <div>Digital Content &amp; Devices</div>
-                                </li>
-                                <li>
-                                    <a href="#">Amazon-luna-Cloud Gaming</a>
-                                </li>
-                                <li>
-                                    <a href="#">Prime Video</a>
-                                </li>
-                                <li>
-                                    <a href="#">Amazon Music</a>
-                                </li>
-                                <li>
-                                    <a href="#">Echo &amp; Alexa</a>
-                                </li>
-                                <li>
-                                    <a href="#">Fire Tablets</a>
-                                </li>
-                                <li>
-                                    <a href="#">Fire Tv</a>
-                                </li>
-                                <li>
-                                    <a href="#">Kinddle E-readers &amp; Books</a>
-                                </li>
-                                <li>
-                                    <a href="#">Audible Books &amp; Originals</a>
-                                </li>
-                                <li>
-                                    <a href="#">Amazon Photos</a>
-                                </li>
-                                <li>
-                                    <a href="#">Amazon Appstore</a>
-                                </li>
-                                <li class="hmenu-seprartor"></li>
-
-
-                                <li>
-                                    <div>Shop By Department</div>
-                                </li>
-                                <li>
-                                    <a href="#">Clothing,Shoes,Jewelry &amp; Watches</a>
-                                </li>
-                                <li>
-                                    <a href="#">Amazon Fresh</a>
-                                </li>
-                                <li>
-                                   <a href="#"> Books</a>
-                                </li>
-                                <li>
-                                    <a href="#">Movies,Music &amp; Games</a>
-                                </li>
-                                <li class="hmenu-seprartor"></li>
-
-
-                                <li>
-                                    <div>Programs &amp; Features</div>
-                                </li>
-                                <li>
-                                    <a href="#">Whole Foods Maarket</a>
-                                </li>
-                                <li>
-                                    <a href="#">Medical Care &amp; pharmacy</a>
-                                </li>
-                                <li>
-                                    <a href="#">Amazon Physical Stores</a>
-                                </li>
-                                <li>
-                                    <a href="#">Subscribe &amp; Save</a>
-                                </li>
-
-                            </ul>
-                        </div>
-
-
-
-                    </div>
                 </a>
+                <div class="sub-all  js-sub-all">
+                    <div class="close js-close">
+                        <i class="fa-solid fa-rectangle-xmark"></i>
+                    </div>
+                    <div class="container-hello-sign-in">
+                        <a href="#" class="sign-in-aside">
+                            <span>Hello,Sign in</span>
+                        </a>
+                    </div>
+                    <div class="hmenu-content">
+                        <ul>
+                            <li>
+                                <div>Trending</div>
+                            </li>
+                            <li>
+                                <a href="#">Best Sellers</a>
+                            </li>
+                            <li>
+                                <a href="#">New realeses</a>
+                            </li>
+                            <li>
+                                <a href="#">Movers &amp; Shakers</a>
+                            </li>
+                            <li class="hmenu-seprartor"></li>
+
+
+                            <li>
+                                <div>Digital Content &amp; Devices</div>
+                            </li>
+                            <li>
+                                <a href="#">Amazon-luna-Cloud Gaming</a>
+                            </li>
+                            <li>
+                                <a href="#">Prime Video</a>
+                            </li>
+                            <li>
+                                <a href="#">Amazon Music</a>
+                            </li>
+                            <li>
+                                <a href="#">Echo &amp; Alexa</a>
+                            </li>
+                            <li>
+                                <a href="#">Fire Tablets</a>
+                            </li>
+                            <li>
+                                <a href="#">Fire Tv</a>
+                            </li>
+                            <li>
+                                <a href="#">Kinddle E-readers &amp; Books</a>
+                            </li>
+                            <li>
+                                <a href="#">Audible Books &amp; Originals</a>
+                            </li>
+                            <li>
+                                <a href="#">Amazon Photos</a>
+                            </li>
+                            <li>
+                                <a href="#">Amazon Appstore</a>
+                            </li>
+                            <li class="hmenu-seprartor"></li>
+
+
+                            <li>
+                                <div>Shop By Department</div>
+                            </li>
+                            <li>
+                                <a href="#">Clothing,Shoes,Jewelry &amp; Watches</a>
+                            </li>
+                            <li>
+                                <a href="#">Amazon Fresh</a>
+                            </li>
+                            <li>
+                               <a href="#"> Books</a>
+                            </li>
+                            <li>
+                                <a href="#">Movies,Music &amp; Games</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <a href="#">Medical Care</a>
                 <a href="#">Groceries</a>
                 <a href="#">Best Sellers</a>
