--- a/indx.html
+++ b/indx.html
@@ -43,7 +43,7 @@
                     <img src="images/hamburger-menu.png" alt="">
                     All
                 </a>
-                <div class="sub-all  js-sub-all">
+                <div class="sub-all none js-sub-all">
                     <div class="close js-close">
                         <i class="fa-solid fa-rectangle-xmark"></i>
                     </div>
@@ -143,6 +143,22 @@
                 <a href="#">Sell</a>
            </div>
     </header>
+    <main>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+    </main>
     <script src="js/script.js"></script>
 </body>
 </html>
