add hamburger menu in mobile size

--- a/indx.html
+++ b/indx.html
@@ -36,7 +36,9 @@
                             <div class="cart-text">Cart</div>
                         </a>
                 </div>
-                <!-- <div class="hamburger-menu"></div> -->
+                <div class="hamburger-menu">
+                    <img src="images/hamburger-menu.png" alt="">
+                </div>
            </div>
            <div class="bottom-header">
                 <a href="#" class="js-all-link">
