"change color cart quantity in mobile size"

--- a/indx.html
+++ b/indx.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="hamburgerMenu-drop-down  js-ham-menu">
                     <a href="#" class="hamburgerMenu-link">Returns &amp; Orders</a>
-                    <a href="#" class="hamburgerMenu-link">cart(<span>4</span>)
+                    <a href="#" class="hamburgerMenu-link">cart(<span class="mobile-size-cart-quantity">4</span>)
                     </a>
                 </div>
            </div>
