--- a/indx.html
+++ b/indx.html
@@ -151,7 +151,20 @@
            </div>
     </header>
     <main>
-    
+        <div class="row">
+            <div class="product-container">1</div>
+            <div class="product-container">2</div>
+            <div class="product-container">3</div>
+            <div class="product-container">4</div>
+            <div class="product-container">5</div>
+            <div class="product-container">6</div>
+            <div class="product-container">7</div>
+            <div class="product-container">8</div>
+            <div class="product-container">9</div>
+            <div class="product-container">10</div>
+            <div class="product-container">11</div>
+            <div class="product-container">12</div>
+        </div>
     </main>
     <script src="js/script.js"></script>
 </body>
