write products in js file

--- a/indx.html
+++ b/indx.html
@@ -151,8 +151,8 @@
            </div>
     </header>
     <main>
-        <div class="row">
-            <div class="product-container">
+        <div class="row js-products-row">
+            <!-- <div class="product-container">
                 <div class="product-image-container">
                     <img src="images/athletic-cotton-socks-6-pairs.png" alt="">
                 </div>
@@ -192,7 +192,7 @@
             <div class="product-container">9</div>
             <div class="product-container">10</div>
             <div class="product-container">11</div>
-            <div class="product-container">12</div>
+            <div class="product-container">12</div> -->
         </div>
     </main>
     <script src="js/script.js"></script>
