add footer for page

--- a/indx.html
+++ b/indx.html
@@ -155,6 +155,141 @@
            
         </div>
     </main>
+    <footer>
+        <div class="footer-top">
+            <a href="">Back to top</a>
+        </div>
+        <div class="footer-bottom">
+            <div>
+                <div class="header-container">Get to Know Us</div>
+                <ul>
+                    <li>
+                        <a href="#">Careers</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Newsletter</a>
+                    </li>
+                    <li>
+                        <a href="#">About Amazon</a>
+                    </li>
+                    <li>
+                        <a href="#">Accessibility</a>
+                    </li>
+                    <li>
+                        <a href="#">Sustainability</a>
+                    </li>
+                    <li>
+                        <a href="#">Press center</a>
+                    </li>
+                    <li>
+                        <a href="#">Investor Relations</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Devices</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Science</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div class="header-container">Make Money With Us</div>
+                <ul>
+                    <li>
+                        <a href="#">Sell more with Amazon</a>
+                    </li>
+                    <li>
+                        <a href="#">Sell apps on Amazon</a>
+                    </li>
+                    <li>
+                        <a href="#">Supply to Amazon</a>
+                    </li>
+                    <li>
+                        <a href="#">Protect &amp; Build Your Brand</a>
+                    </li>
+                    <li>
+                        <a href="#">Become an Affiliate</a>
+                    </li>
+                    <li>
+                        <a href="#">Become a Delivery Driver</a>
+                    </li>
+                    <li>
+                        <a href="#">Start a Package Delivery Business</a>
+                    </li>
+                    <li>
+                        <a href="#">Advertise Your Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Self-Publish with Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Host an Amazon Hub</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div class="header-container">Amazon Payment Products</div>
+                <ul>
+                    <li>
+                        <a href="#">Amazon Visa</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Store Card</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Secured Card</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Business Card</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop with Points</a>
+                    </li>
+                    <li>
+                        <a href="#">redit Card Marketplace</a>
+                    </li>
+                    <li>
+                        <a href="#">Reload Your Balance</a>
+                    </li>
+                    <li>
+                        <a href="#">Gift Cards</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Currency Converter</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div class="header-container">Let Us Help You</div>
+                <ul>
+                    <li>
+                        <a href="#">Your Account</a>
+                    </li>
+                    <li>
+                        <a href="#">Your Orders</a>
+                    </li>
+                    <li>
+                        <a href="#">Shipping Rates &amp; Policies</a>
+                    </li>
+                    <li>
+                        <a href="#">Amazon Prime</a>
+                    </li>
+                    <li>
+                        <a href="#">Returns &amp; Replacements</a>
+                    </li>
+                    <li>
+                        <a href="#">Manage Your Content and Devices</a>
+                    </li>
+                    <li>
+                        <a href="#">Reccalls and Product Safety Alerts</a>
+                    </li>
+                    <li>
+                        <a href="#">Help</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
