--- a/indx.html
+++ b/indx.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Sample Amazon</title>
 </head>
-<body>
+<body id="top">
     <header>
            <div class="top-header">
                 <div class="amazon-logo">
@@ -157,7 +157,7 @@
     </main>
     <footer>
         <div class="footer-top">
-            <a href="">Back to top</a>
+            <a href="#top">Back to top</a>
         </div>
         <div class="footer-bottom">
             <div>
