--- a/indx.html
+++ b/indx.html
@@ -290,6 +290,7 @@
             </div>
         </div>
     </footer>
+    <script src="data/cart.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
