make interactive cart Quantity on the top right of the page

--- a/indx.html
+++ b/indx.html
@@ -32,7 +32,7 @@
                         </a>
                         <a href="checkout" class="cart-link">
                             <img src="images/cart-icon.png" alt="" class="shopping-icon">
-                            <div class="cart-quantity">4</div>
+                            <div class="cart-quantity js-cart-quantity">0</div>
                             <div class="cart-text">Cart</div>
                         </a>
                 </div>
