--- a/indx.html
+++ b/indx.html
@@ -290,7 +290,6 @@
             </div>
         </div>
     </footer>
-    <script src="data/cart.js"></script>
-    <script src="js/script.js"></script>
+    <script type="module"  src="js/script.js"></script>
 </body>
 </html>
