create header check-out page🤖

--- a/indx.html
+++ b/indx.html
@@ -30,7 +30,7 @@
                             <span>Returns</span>
                             <span>&Orders</span>
                         </a>
-                        <a href="checkout" class="cart-link">
+                        <a href="html/checkout.html" class="cart-link">
                             <img src="images/cart-icon.png" alt="" class="shopping-icon">
                             <div class="cart-quantity js-cart-quantity">0</div>
                             <div class="cart-text">Cart</div>
