--- a/indx.html
+++ b/indx.html
@@ -20,8 +20,8 @@
                 </a>
                 </div>
                 <div class="search-bar">
-                    <input type="text" placeholder="Search" class="input-search-bar">
-                    <button class="search-button">
+                    <input type="text" placeholder="Search" class="input-search-bar js-search">
+                    <button class="search-button js-search-button">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </div>
