fix checkout static page

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -31,49 +31,51 @@
         <div class="page-title">Review your order</div>
         <div class="checkout-row">
             <div class="cart-summary">
-                <div class="delivery-date">
-                    Delivery date: 
-                    <span class="js-delivery-date">Monday, february 5</span>
-                </div>
-                <div class="cart-item-detail-row">
-                    <div class="cart-item-detail">
-                        <div class="image-details">
-                            <div class="image">
-                                <img src="/images/athletic-cotton-socks-6-pairs.png" alt="">
-                            </div>
-                            <div class="details">
-                                <div class="product-name"> Black and Gray Athletic Cotton Socks - 6 Pairs</div>
-                                <div class="product-price">$10.90</div>
-                                <div class="product-quantity">
-                                    quantity: 
-                                    <span class="js-quantity-label">4</span>
-                                    <span class="js-update-quantity-link link-primary">Update</span>
-                                    <span class="js-delete-quantity-link link-primary">Delete</span>
+                <div class="cart-item-container">
+                    <div class="delivery-date">
+                        Delivery date: 
+                        <span class="js-delivery-date">Monday, february 5</span>
+                    </div>
+                    <div class="cart-item-detail-row">
+                        <div class="cart-item-detail">
+                            <div class="image-details">
+                                <div class="image">
+                                    <img src="/images/athletic-cotton-socks-6-pairs.png" alt="">
+                                </div>
+                                <div class="details">
+                                    <div class="product-name"> Black and Gray Athletic Cotton Socks - 6 Pairs</div>
+                                    <div class="product-price">$10.90</div>
+                                    <div class="product-quantity">
+                                        quantity: 
+                                        <span class="js-quantity-label">4</span>
+                                        <span class="js-update-quantity-link link-primary">Update</span>
+                                        <span class="js-delete-quantity-link link-primary">Delete</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="delivery-options">
-                        <div class="delivery-option-title">Choose a Delivary option:</div>
-                        <div class="delivery-option">
-                            <input type="radio" name="delivery">
-                            <div>
-                                <div class="delivery-option-date">Monday,February 5</div>
-                                <div class="delivery-option-price">FREE Shipping</div>
+                        <div class="delivery-options">
+                            <div class="delivery-option-title">Choose a Delivary option:</div>
+                            <div class="delivery-option">
+                                <input type="radio" name="delivery">
+                                <div>
+                                    <div class="delivery-option-date">Monday,February 5</div>
+                                    <div class="delivery-option-price">FREE Shipping</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="delivery-option">
-                            <input type="radio" name="delivery">
-                            <div>
-                                <div class="delivery-option-date">Tuesday,january 30</div>
-                                <div class="delivery-option-price">$4.99 - Shipping</div>
+                            <div class="delivery-option">
+                                <input type="radio" name="delivery">
+                                <div>
+                                    <div class="delivery-option-date">Tuesday,january 30</div>
+                                    <div class="delivery-option-price">$4.99 - Shipping</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="delivery-option">
-                            <input type="radio" name="delivery">
-                            <div>
-                                <div class="delivery-option-date">Friday, January 26</div>
-                                <div class="delivery-option-price">$9.99 - Shipping</div>
+                            <div class="delivery-option">
+                                <input type="radio" name="delivery">
+                                <div>
+                                    <div class="delivery-option-date">Friday, January 26</div>
+                                    <div class="delivery-option-price">$9.99 - Shipping</div>
+                                </div>
                             </div>
                         </div>
                     </div>
