Generate html in checkout.js file for the order summary 🚀

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -30,8 +30,8 @@
     <div class="checkout-main">
         <div class="page-title">Review your order</div>
         <div class="checkout-row">
-            <div class="cart-summary">
-                <div class="cart-item-container">
+            <div class="cart-summary js-cart-summary">
+                <!-- <div class="cart-item-container">
                     <div class="delivery-date">
                         Delivery date: 
                         <span class="js-delivery-date">Monday, february 5</span>
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="payment-summary">
                 <div class="js-payment-info">
@@ -111,6 +111,6 @@
             </div>
         </div>
     </div>
-    
+    <script type="module" src="/js/checkout.js"></script>
 </body>
 </html>
