make update button interactive with 1 bug 🚑

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -18,7 +18,7 @@
             </div>
             <div class="middle-section">
                 <span>Checkout (
-                    <a href="/indx.html" class="return-to-home-link">0 item</a>
+                    <a href="/indx.html" class="return-to-home-link js-total-products"></a>
                     )
                 </span>
             </div>
