add  meta name in index.html

--- a/indx.html
+++ b/indx.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="online shopping">
     <link rel="stylesheet" href="fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/css/all.min.css">
     <link rel="shortcut icon" href="images/_e9e31c3b-0252-4f92-b307-e122bd65422a.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
@@ -26,7 +27,7 @@
                     </button>
                 </div>
                 <div class="shopping">
-                        <a href="orders" class="orders-links">
+                        <a href="#" class="orders-links">
                             <span>Returns</span>
                             <span>&Orders</span>
                         </a>
