save data and generate html for payment summary

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -81,33 +81,8 @@
                     </div>
                 </div> -->
             </div>
-            <div class="payment-summary">
-                <div class="js-payment-info">
-                    <div class="payment-summary-title">Order-summary</div>
-                    <div class="payment-summary-grid">
-                        <span>Item(22):</span>
-                        <span>$4</span>
-                    </div>
-                    <div class="payment-summary-grid">
-                        <span>Shipping &amp; handling:</span>
-                        <span>$4.99</span>
-                    </div>
-                    <div class="payment-summary-grid">
-                        <span>Total before tax:</span>
-                        <span class="total">$8.99</span>
-                    </div>
-                    <div class="payment-summary-grid">
-                        <span>Estimated tax(10%):</span>
-                        <span>$0.89</span>
-                    </div>
-                    <div class="payment-summary-grid total-row">
-                        <span>Order total:</span>
-                        <span>$9.88</span>
-                    </div>
-                </div>
-                <div class="button-place-order">
-                    <button class="js-place-order-button place-order-button">Place your order</button>
-                </div>
+            <div class="payment-summary js-payment-summary">
+              
             </div>
         </div>
     </div>
